tests/paczka2/big_fuzzy/60587034.err
Error in line 2: HlbP4L S633 20,2
Error in line 4: HlbP4L S596 14,6
Error in line 7: S633 A504 6,75
Error in line 13: HlbP4L S633 83,1
Error in line 23: MR7jGPf S596 26,0
Error in line 36: HlbP4L A5{4 258,4
Error in line 24: i5fJDZVExbf A504 10,2
Error in line 14: 8Ap9TAEF S596 78,6
Error in line 38: NBom S596 509,0
Error in line 47: HlbP4L A504 28,2
Error in line 40: MR7jGPf A112 38,9
Error in line 44: 8Ap9TAEF A112 87,9
Error in line 54: NBom A11! 37,5
Error in line 48: NBom A112 67,0
Error in line 55: NBom S596 49,1
Error in line 59: NBom A504 45,5
Error in line 86: MR7jGPf S596 -2,9
Error in line 85: MR7jGPf S596 36,5
Error in line 87: i5fJDZVExbf A504 52,5
Error in line 89: i5fJDZVExbf S596 45,1
Error in line 92: i5fJDZVExbf A112 67,9
Error in line 96: NBom S596 65,9
Error in line 105: 8Ap9TAEF A504 37,2
Error in line 103: MR7jGPf A112 151,8
Error in line 106: i5fJDZVExbf S633 52,4
Error in line 65: HlbP4L S633 4,3
Error in line 121: MR7jGPf A504 1192
Error in line 123: S633 S633 19,0
Error in line 132: 8Ap9TAEF A112 58,9
Error in line 133: S633 A112 36,3
Error in line 135: 8Ap9TAEF S596 58,8
Error in line 109: MR7jGPf A504 25,3
Error in line 147: HlbP4L S633 26,6
Error in line 161: 8Ap9TAEF S633 78,3
Error in line 164: 8Ap9TAEF A112 98,7
Error in line 171: MR7jGPf A112 32,5
Error in line 175: 8Ap9TAEF A504 35,9
Error in line 183: HlbP4L A504 137,!
Error in line 198: MR7jGPf A112 -2,2
Error in line 196: MR7jGPf A112 61,5
Error in line 200: MR7jGPf S596 31,2
Error in line 205: NBom S596 -1,84
Error in line 194: NBom S596 60,0
Error in line 212: NBom A112 6,9
Error in line 218: MR7jGPf S633 7,6
Error in line 243: 8Ap9TAEF A112 17,3
Error in line 247: 8Ap9TAEF S596 24,6
Error in line 233: MR7jGPf A504 41,8
